test/good/63.zlus
(* period in nested let/in containing a match *)

let hybrid nested z = x where
  x = (let match z with
           | true ->  do p = period (1.0 | 1.0) done
           | false -> do p = period (2.0 | 2.0) done
       in p)

let hybrid main () =
  let x = nested true in
  ()

